--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
-    <meta name=" description"
-    content="A guided introduction through the fundamentals of Git, HTML, & CSS">
+    <meta name=" description" content="A guided introduction through the fundamentals of Git, HTML, & CSS">
   <meta name="theme-color" content="#0000ff">
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" media="screen" href="css/reset.css">
@@ -31,8 +30,9 @@
     this Starter Pack to be eligible.</p>
 
   <ul>
-      <li><a href="" target="_blank" rel="noopener">Schedule an Interview</a></li>
-      <li><a href="https://github.com/hack4impact-calpoly/starter-pack/discussions/categories/general" target="_blank" rel="noopener">Starter Pack Discussions</a></li>
+    <li><a href="" target="_blank" rel="noopener">Schedule an Interview</a></li>
+    <li><a href="https://github.com/hack4impact-calpoly/starter-pack/discussions/categories/general" target="_blank"
+        rel="noopener">Starter Pack Discussions</a></li>
     <!--   <li><a href="https://github.com/edgecase/git_immersion/issues" target="_blank" rel="noopener">Report an Issue</a> -->
     <!--   </li> -->
   </ul>
@@ -42,13 +42,13 @@
   <div class="footer">
     <p>
       H4I Starter Pack is released under a
-      <a href="http://creativecommons.org/licenses/by-nc-sa/3.0" target="_blank" rel="noopener">Creative Commons
-        BY-NC-SA 3.0 License.</a>
+      <a href="http://creativecommons.org/licenses/by-nc-sa/4.0" target="_blank" rel="noopener">Creative Commons
+        BY-NC-SA 4.0 License.</a>
     </p>
 
-    <p>️️♥ Made with love by <a href="https://calpoly.hack4impact.org/" target="_blank" rel="noopener">Hack4Impact Cal
-        Poly </a>. <i>Heavily</i> inspired by <a href="https://gitimmersion.com/" target="_blank" rel="noopener">Git
-        Immersion</a>.
+    <p>️️♥ Adapted with love by <a href="https://calpoly.hack4impact.org/" target="_blank" rel="noopener">Hack4Impact
+        Cal Poly</a> from <a href="https://gitimmersion.com/" target="_blank" rel="noopener">Git
+        Immersion</a> by <a href="https://en.wikipedia.org/wiki/Jim_Weirich">Jim Weirich</a>
     </p>
   </div>
 </body>
