--- a/lab_011.html
+++ b/lab_011.html
@@ -48,10 +48,27 @@
         </li>
       </ul>
       <h2>Change the README.md</h2>
+      Put the follow in the README.md:
+      <h3 class="file-heading"><em>README.md</em></h3>
+      <pre class="file"><code class="language-markdown">#&ltYour Name&gt's Personal Website
+This is a personal website built using the Hack4Impact Starter Pack!
+&ltYou can add any description you want here.&gt
+[Visit it here](<github username>.github.io)!</code></pre>
+        <p class="note"><code>.md</code> files use markdown. It allows you to put formatting like <i>italics</i> or
+        <strong>bold</strong> with just text. You might've seen markdown in Discord! </p>
       <h2>Check the Status</h2>
-
-
-
+      Now check the status of the working directory.
+      <h3><b>Execute</b></h3>
+      <pre class="command-line"><code class="language-git">git status</code></pre>
+      <h3><b>Output</b></h3>
+      <pre class="command-line git" data-prompt="$" data-filter-output="(out)"><code class="language-git">git status
+(out)On branch main
+(out)Changes not staged for commit:
+(out)  (use "git add &ltfile&gt..." to update what will be committed)
+(out)  (use "git restore &ltfile&gt..." to discard changes in working directory)
+(out)	modified:   README.md
+(out)
+(out)no changes added to commit (use "git add" and/or "git commit -a")</code></pre>
     </div>
   </main>
   <script src="js/ui.js" type="text/javascript"></script>
