--- a/lab_05.html
+++ b/lab_05.html
@@ -60,9 +60,9 @@
       <p>Check if you already have <code>Git</code> installed. Open your CLI (Powershell for Windows. Terminal for
         Unix/Mac.) and enter the following:</p>
       <h3><b>Execute:</b></h3>
-      <pre class="command-line git" data-prompt="$"><code class="language-git">git --version</code></pre>
+      <pre class="command-line" data-prompt="$"><code class="language-git">git --version</code></pre>
       <h3><b>Output:</b></h3>
-      <pre class="command-line git" data-prompt="$" data-filter-output="(out)"><code class="language-git">git --version
+      <pre class="command-line" data-prompt="$" data-filter-output="(out)"><code class="language-git">git --version
 (out)git version 2.42.0</code></pre>
       <p>If you don't see the expected output or similar, download and install <code>Git</code> from here: <a
           href="https://git-scm.com/downloads">https://git-scm.com/downloads</a>
@@ -70,18 +70,18 @@
       <h2>Setup Name and Email</h2>
       <p>Now that we have <code>Git</code> installed, we need to configure it. In your CLI:</p>
       <h3><b>Execute</b></h3>
-      <pre class="command-line git" data-prompt="$"><code class="language-git">git config --global user.name "Your Name"</code></pre>
-      <pre class="command-line git" data-prompt="$"><code class="language-git">git config --global user.email "your_email@whatever.com"</code></pre>
+      <pre class="command-line" data-prompt="$"><code class="language-git">git config --global user.name "Your Name"</code></pre>
+      <pre class="command-line" data-prompt="$"><code class="language-git">git config --global user.email "your_email@whatever.com"</code></pre>
       <p class="note">We recommend you use the same name and email as your GitHub account.</p>
       <h2>Setup Line Ending Preferences</h2>
       <p>For Unix/Mac users:</p>
       <h3><b>Execute:</b></h3>
-      <pre class="command-line git" data-prompt="$"><code class="language-git">git config --global core.autocrlf input</code></pre>
-      <pre class="command-line git" data-prompt="$"><code class="language-git">git config --global core.safecrlf true</code></pre>
+      <pre class="command-line" data-prompt="$"><code class="language-git">git config --global core.autocrlf input</code></pre>
+      <pre class="command-line" data-prompt="$"><code class="language-git">git config --global core.safecrlf true</code></pre>
       <p>And for Windows users:</p>
       <h3><b>Execute:</b></h3>
-      <pre class="command-line git" data-prompt="$"><code class="language-git">git config --global core.autocrlf true</code></pre>
-      <pre class="command-line git" data-prompt="$"><code class="language-git">git config --global core.safecrlf true</code></pre>
+      <pre class="command-line" data-prompt="$"><code class="language-git">git config --global core.autocrlf true</code></pre>
+      <pre class="command-line" data-prompt="$"><code class="language-git">git config --global core.safecrlf true</code></pre>
 
     </div>
   </main>
