--- a/lab_07.html
+++ b/lab_07.html
@@ -121,7 +121,7 @@
         <li><code>Git</code> <em>hashes</em> everything before it is saved. Given an input, an algorithm calculates a
           unique, fixed-length output. If something changes to the input e.g corruption, loss of data, etc. then the
           hash value will also change. <code>Git</code> uses the SHA-1 hash, which looks like this:<br><br>
-          <pre class="git"><code class="language-git">24b9da6552252987aa493b52f8696cd6d3b00373</code></pre>
+          <pre><code class="language-git">24b9da6552252987aa493b52f8696cd6d3b00373</code></pre>
           <code>Git</code> will also reference files by their hash value so you'll see these hashes everywhere in
           <code>Git</code>.
         </li>
