--- a/lab_08.html
+++ b/lab_08.html
@@ -94,9 +94,9 @@
       </p>
       <p>In the terminal, run the following to create a <code>Git</code> repository:</p>
       <h3><b>Execute</b></h3>
-      <pre class="command-line git" data-prompt="$"><code class="language-git">git init</code></pre>
+      <pre class="command-line" data-prompt="$"><code class="language-git">git init</code></pre>
       <h3><b>Output</b></h3>
-      <pre class="command-line git" data-prompt="$" data-filter-output="(out)"><code class="language-git">git init
+      <pre class="command-line" data-prompt="$" data-filter-output="(out)"><code class="language-git">git init
 (out)Initialized empty Git repository in Users/khoaly/khoa-l.github.io/.git/</code></pre>
       <p class="note">Based on Labs 6 and 7, what do you think the .git file created when you initialize the repository is?</p>
 
