--- a/lab_09.html
+++ b/lab_09.html
@@ -49,9 +49,9 @@
       <p>Use the <code>git status</code> command to check and monitor the status of the repository in the current working
         directory.</p>
       <h3><b>Execute</b></h3>
-      <pre class="command-line git" data-prompt="$"><code class="language-git">git status</code></pre>
+      <pre class="command-line" data-prompt="$"><code class="language-git">git status</code></pre>
       <h3><b>Output</b></h3>
-      <pre class="command-line git" data-prompt="$" data-filter-output="(out)"><code class="language-git">git init
+      <pre class="command-line" data-prompt="$" data-filter-output="(out)"><code class="language-git">git init
 (out)On branch main
 (out)
 (out)No commits yet
