feat: more labs

--- a/lab_012.html
+++ b/lab_012.html
@@ -43,8 +43,13 @@
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about <code>Git</code></li>
+        <li>Learn how to stage changes for later commits</li>
       </ul>
+      <h2>Add Changes to Staging Area</h2>
+      <p>Use the following command to move the modified files to the staging area!</p>
+      <h3><b>Execute</b></h3>
+      <pre><code class="language-git">git add README.md</code></pre>
+      <h3><b>Output</b></h3>
 
 
     </div>
