--- a/lab_015.html
+++ b/lab_015.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab 7 - Git
+    Lab 15 - HyperText Markup Language
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -16,7 +16,7 @@
   <link href="css/prism.css" rel="stylesheet" />
 </head>
 
-<body data-lab-id="7">
+<body data-lab-id="15">
   <a class="skip-to-content" href="#content" tabindex="1">
     Skip to content
   </a>
@@ -37,14 +37,40 @@
     </nav>
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
-        <em>Lab 7</em>
-        Git
+        <em>Lab 15</em>
+
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about <code>Git</code></li>
+        <li>Learn about HyperText Markup Language (HTML)</li>
       </ul>
+      <h2>HTML</h2>
+      <p>Now that you've learned the very basics of <code>Git</code>, let's start making your personal website! We'll
+        come back to Git in a little bit, but for now let's learn about the HyperText Markup Language. HTML is one half
+        of what makes up a static website. If CSS is the pretty neon lights, HTML is all the wiring and framework
+        underneath.</p>
+      <p>It may sound intimidating, <strong>HyperText Markup Language</strong>, but HTML is just text with some fancy
+        formatting features. In fact, all you need to start writing HTML is a text editor.</p>
+      <p> You could write it in Word or Google Docs or Notepad if you really want the <em>raw</em> experience. We'll be
+        using Visual Studio Code for comfort and ease of use.</p>
+      <h2>Write Some HTML</h2>
+      <p>Open the file called <code>index.html</code> that you created before and type the the following!</p>
+      <h3 class="file-heading"><em>index.html</em></h3>
+      <pre class="file"><code class="language-html">Hello World! This is my website.</code></pre>
+      <h2>View Your HTML</h2>
+      <video class="video" controls>
+        <source src="assets/open.mp4" type="video/mp4">
+      </video>
+      <p>Now to look at your spiffy new website, open a browser and type in the file path of your file. For
+        example: <code>/Users/hack4impact/hack4impact-calpoly.github.io/index.html</code> on macOs.</p>
+      <p>You can also go into your File Explorer or Finder and open the file from there. Or, go to the menu bar of
+        your browser and under <strong>File</strong> &gt <strong>Open File...</strong></p>
+      <p>Congrats. You've made and opened your first HTML webpage.</p>
+      <h2>Don't Forget...</h2>
+      <p>Remember, we're still working in a version controlled directory. Go ahead and stage then commit your latest
+        changes! Follow the conventional commit message guidelines from Lab 10.</p>
+      <p>The more frequently you commit the better. We'll be looking for good commit histories. We believe in you.</p>
 
 
     </div>
