--- a/lab_014.html
+++ b/lab_014.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab 7 - Git
+    Lab 14 - Committing Changes
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -16,7 +16,7 @@
   <link href="css/prism.css" rel="stylesheet" />
 </head>
 
-<body data-lab-id="7">
+<body data-lab-id="14">
   <a class="skip-to-content" href="#content" tabindex="1">
     Skip to content
   </a>
@@ -37,15 +37,34 @@
     </nav>
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
-        <em>Lab 7</em>
-        Git
+        <em>Lab 14</em>
+        Committing Changes
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about <code>Git</code></li>
+        <li>Learn how to commit changes to the repository</li>
       </ul>
-
+      <h2>Commit the Change</h2>
+      <p>Run the following command to commit your changes from the staging area to your <code>Git</code> repository.
+        Remember to include the <code>-m</code> flag.</p>
+      <h3><b>Execute</b></h3>
+      <pre class="command-line" data-prompt="$" data-filter-output="(out)"><code class="language-git">git commit -m "feat: add content to README.md"</code></pre>
+      <h3><b>Output</b></h3>
+      <pre class="command-line" data-prompt="$" data-filter-output="(out)"><code class="language-git">git commit -m "feat: add content to README.md"
+(out)[main c5ac52c] feat: add content to README.md
+(out) 1 file changed, 4 insertions(+)
+(out)</code></pre>
+      <h2>Check the Status</h2>
+      <p>Let's check the status again to make sure it's committed.</p>
+      <h3><b>Execute</b></h3>
+      <pre class="command-line" data-prompt="$"><code class="language-git">git status</code></pre>
+      <h3><b>Output</b></h3>
+      <pre class="command-line" data-prompt="$" data-filter-output="(out)"><code class="language-git">git status
+(out)On branch main
+(out)nothing to commit, working tree clean
+(out)</code></pre>
+      <p>The working directory is clean and ready for you to continue!</p>
 
     </div>
   </main>
