--- a/ref.html
+++ b/ref.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab 7 - Git
+    Lab  - Git
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -16,7 +16,7 @@
   <link href="prism.css" rel="stylesheet" />
 </head>
 
-<body data-lab-id="7">
+<body data-lab-id="">
   <a class="skip-to-content" href="#content" tabindex="1">
     Skip to content
   </a>
@@ -37,7 +37,7 @@
     </nav>
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
-        <em>Lab 7</em>
+        <em>Lab </em>
         Git
       </h1>
 
