feat: add even more labs and refactored

--- a/lab_010.html
+++ b/lab_010.html
@@ -89,7 +89,7 @@
       <p>You should see this message which means the state of your working directory matches the latest state committed to the repository!</p>
       <h2>More Files to Track</h2>
       <p>Create the following files, follow the same steps, and track them one at a time. For each file, the commit message should follow
-      the format of <code class="language-git">"feat: add &ltfile name&gt"</code>.</p>
+      the format of <code class="language-git">"feat: add &lt;file name&gt;"</code>.</p>
       <ul>
         <li>styles.css</li>
         <li>blog.html</li>
@@ -99,7 +99,7 @@
         <li>resume.html</li>
       </ul>
       <p>Alternatively, you can make one commit with all the files. In which case, the commit message should be
-      <code class="language-git">"feat: &ltdescribe commit in 50 words&gt"</code>.</p>
+      <code class="language-git">"feat: &lt;describe commit in 50 words&gt;"</code>.</p>
       <p class="note"><strong>Hint:</strong> You can stage more than one file before you commit them.</p>
 
     </div>
