--- a/lab_015.html
+++ b/lab_015.html
@@ -46,31 +46,30 @@
         <li>Learn about HyperText Markup Language (HTML)</li>
       </ul>
       <h2>HTML</h2>
-      <p>Now that you've learned the very basics of <code>Git</code>, let's start making your personal website! We'll
-        come back to Git in a little bit, but for now let's learn about the HyperText Markup Language. HTML is one half
-        of what makes up a static website. If CSS is the pretty neon lights, HTML is all the wiring and framework
-        underneath.</p>
+      <p> We'll come back to Git in a little bit, but for now let's learn about the HyperText Markup Language. HTML is
+        one half of what makes up a static website. If CSS is the pretty neon lights, HTML is all the wiring and
+        framework underneath. HTML is the foundation and structure for <em>all</em> web applications.</p>
       <p>It may sound intimidating, <strong>HyperText Markup Language</strong>, but HTML is just text with some fancy
         formatting features. In fact, all you need to start writing HTML is a text editor.</p>
       <p> You could write it in Word or Google Docs or Notepad if you really want the <em>raw</em> experience. We'll be
         using Visual Studio Code for comfort and ease of use.</p>
       <h2>Write Some HTML</h2>
-      <p>Open the file called <code>index.html</code> that you created before and type the the following!</p>
+      <p>Open the file called <code>index.html</code> that you created before and add the the following.</p>
       <h3 class="file-heading"><em>index.html</em></h3>
       <pre class="file"><code class="language-html">Hello World! This is my website.</code></pre>
       <h2>View Your HTML</h2>
       <video class="video" controls>
         <source src="assets/open.mp4" type="video/mp4">
       </video>
-      <p>Now to look at your spiffy new website, open a browser and type in the file path of your file. For
+      <p>To see your spiffy new website, open a browser and type in the file path of your file. For
         example: <code>/Users/hack4impact/hack4impact-calpoly.github.io/index.html</code> on macOs.</p>
       <p>You can also go into your File Explorer or Finder and open the file from there. Or, go to the menu bar of
         your browser and under <strong>File</strong> &gt <strong>Open File...</strong></p>
-      <p>Congrats. You've made and opened your first HTML webpage.</p>
+      <p>Congrats! You've made and opened your first HTML webpage.</p>
       <h2>Don't Forget...</h2>
       <p>Remember, we're still working in a version controlled directory. Go ahead and stage then commit your latest
-        changes! Follow the conventional commit message guidelines from Lab 10.</p>
-      <p>The more frequently you commit the better. We'll be looking for good commit histories. We believe in you.</p>
+        changes. Follow the conventional commit message guidelines from Lab 10 and best practices for <code>Git</code>.</p>
+      <p>The more frequently you commit the better. We'll be looking for good commit histories. We believe in you. :)</p>
 
 
     </div>
