--- a/lab_016.html
+++ b/lab_016.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab  - Git
+    Lab 16 - Tags, Attributes, and Elements
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -11,12 +11,12 @@
   <meta content="A guided tour through the fundamentals of Git, HTML, & CSS" name=" description" />
   <meta content="#0000ff" name="theme-color" />
   <link href="manifest.json" rel="manifest" />
-  <link href="reset.css" media="screen" rel="stylesheet" />
-  <link href="screen.css" media="screen" rel="stylesheet" />
-  <link href="prism.css" rel="stylesheet" />
+  <link href="css/reset.css" media="screen" rel="stylesheet" />
+  <link href="css/screen.css" media="screen" rel="stylesheet" />
+  <link href="css/prism.css" rel="stylesheet" />
 </head>
 
-<body data-lab-id="">
+<body data-lab-id="16">
   <a class="skip-to-content" href="#content" tabindex="1">
     Skip to content
   </a>
@@ -37,20 +37,51 @@
     </nav>
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
-        <em>Lab </em>
-        Git
+        <em>Lab 16</em>
+        Tags, Attributes, and Elements
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about <code>Git</code></li>
+        <li>Learn what tags, attributes, and elements are</li>
+        <li>Add them to your personal website</li>
       </ul>
+      <h2>Tags</h2>
+      <p><em>Tags</em> are the building blocks of all HTML documents. They surround content giving meaning and context
+        to that content. Let's add a few to your website. Make sure your document looks like the following:</p>
+      <h3 class="file-heading"><em>index.html</em></h3>
+      <pre class="file line-numbers" data-src="prism/html/basic-1.html"></pre>
+      <p>At the very top of all HTML documents is a <strong>document type declaration</strong>. This tells your web
+        browser what version of HTML you're using. Always include this or your browser will have no idea how to
+        interpret your HTML document.</p>
+      <h3 class="file-heading"><em>index.html</em></h3>
+      <pre class="file line-numbers" data-line="1" data-src="prism/html/basic-1.html"></pre>
+      <p>Following that, everything is wrapped in the <code class="language-html">&lt;html&gt;</code> <strong>opening
+          tag</strong> and the <code class="language-html">&lt;/html&gt;</code> <strong>closing tag</strong>. Everything
+        we put in between is an HTML document. The main content of the page goes between the <code
+          class="language-html">&lt;body&gt;</code> and <code class="language-html">&lt;/body&gt;</code> tags.
+      </p>
+      <h3 class="file-heading"><em>index.html</em></h3>
+      <pre class="file line-numbers" data-line="2-3,5-6" data-src="prism/html/basic-1.html"></pre>
+      <p>Most tags will look like the <code class="language-html">&lt;html&gt;</code> and <code
+          class="language-html">&lt;body&gt;</code> tags do with an opening and closing tag. Usually, content can be put
+        in between the tags.</p>
+      <p class="note">Now would be a good time to stage and commit your changes as we're about to go into a new topic!
+      </p>
+      <h2>Structure, not Style</h2>
+      <p>If you open your browser now and refresh your HTML page, you'll see that nothing has changed. This is because
+        HTML doesn't change the way things <em>appear</em>, but it adds structure and meaning to the content. Right-click the
+        site and <strong>Inspect</strong> to see the HTML structure you added.</p>
+      <video class="video" controls>
+        <source src="assets/tags.mp4" type="">
+      </video>
+      <h2>Attributes</h2>
 
 
     </div>
   </main>
-  <script src="ui.js" type="text/javascript"></script>
-  <script src="prism.js" type="text/javascript"></script>
+  <script src="js/ui.js" type="text/javascript"></script>
+  <script src="js/prism.js" type="text/javascript"></script>
   <script type="module">
     import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
     mermaid.initialize({startOnLoad: true, theme: "base"});
