--- a/lab_019.html
+++ b/lab_019.html
@@ -11,9 +11,9 @@
   <meta content="A guided tour through the fundamentals of Git, HTML, & CSS" name=" description" />
   <meta content="#0000ff" name="theme-color" />
   <link href="manifest.json" rel="manifest" />
-  <link href="reset.css" media="screen" rel="stylesheet" />
-  <link href="screen.css" media="screen" rel="stylesheet" />
-  <link href="prism.css" rel="stylesheet" />
+  <link href="css/reset.css" media="screen" rel="stylesheet" />
+  <link href="css/screen.css" media="screen" rel="stylesheet" />
+  <link href="css/prism.css" rel="stylesheet" />
 </head>
 
 <body data-lab-id="">
@@ -49,8 +49,8 @@
 
     </div>
   </main>
-  <script src="ui.js" type="text/javascript"></script>
-  <script src="prism.js" type="text/javascript"></script>
+  <script src="js/ui.js" type="text/javascript"></script>
+  <script src="js.prism.js" type="text/javascript"></script>
   <script type="module">
     import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
     mermaid.initialize({startOnLoad: true, theme: "base"});
