--- a/lab_09.html
+++ b/lab_09.html
@@ -57,7 +57,7 @@
 (out)No commits yet
 (out)
 (out)Untracked files:
-(out) (use "git add &ltfile&gt..." to include in what will be committed)
+(out) (use "git add &lt;file&gt;..." to include in what will be committed)
 (out)        README.md
 (out)
 (out)nothing added to commit but untracked files present (use "git add" to track)</code></pre>
