feat: add more html pages

--- a/lab_015.html
+++ b/lab_015.html
@@ -46,10 +46,12 @@
         <li>Learn about HyperText Markup Language (HTML)</li>
       </ul>
       <h2>HTML</h2>
-      <p> We'll come back to Git in a little bit, but for now let's learn about the HyperText Markup Language. HTML is
-        one half of what makes up a static website. If CSS is the pretty neon lights, HTML is all the wiring and
-        framework underneath. HTML is the foundation and structure for <em>all</em> web applications.</p>
-      <p>It may sound intimidating, <strong>HyperText Markup Language</strong>, but HTML is just text with some fancy
+      <p> We'll come back to Git in a little bit, but for now let's learn about the <strong>HyperText Markup
+          Language</strong>. <strong>HTML</strong> is one half of what makes up a static website. If CSS is the pretty
+        neon lights, HTML is all the wiring and framework underneath. HTML is the foundation and structure for
+        <em>all</em> web applications.
+      </p>
+      <p>It may sound intimidating, but HTML is just text with some fancy
         formatting features. In fact, all you need to start writing HTML is a text editor.</p>
       <p> You could write it in Word or Google Docs or Notepad if you really want the <em>raw</em> experience. We'll be
         using Visual Studio Code for comfort and ease of use.</p>
@@ -68,8 +70,10 @@
       <p>Congrats! You've made and opened your first HTML webpage.</p>
       <h2>Don't Forget...</h2>
       <p>Remember, we're still working in a version controlled directory. Go ahead and stage then commit your latest
-        changes. Follow the conventional commit message guidelines from Lab 10 and best practices for <code>Git</code>.</p>
-      <p>The more frequently you commit the better. We'll be looking for good commit histories. We believe in you. :)</p>
+        changes. Follow the conventional commit message guidelines from Lab 10 and best practices for <code>Git</code>.
+      </p>
+      <p>The more frequently you commit the better. We'll be looking for good commit histories. We believe in you. :)
+      </p>
 
 
     </div>
