--- a/lab_011.html
+++ b/lab_011.html
@@ -59,7 +59,7 @@ This is a personal website built using the Hack4Impact Starter Pack!
       <h2>Check the Status</h2>
       Now check the status of the working directory.
       <h3><b>Execute</b></h3>
-      <pre class="command-line"><code class="language-git">git status</code></pre>
+      <pre class="command-line" data-prompt="$"=""><code class="language-git">git status</code></pre>
       <h3><b>Output</b></h3>
       <pre class="command-line git" data-prompt="$" data-filter-output="(out)"><code class="language-git">git status
 (out)On branch main
