--- a/lab_017.html
+++ b/lab_017.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab  - Git
+    Lab 17 - Page Titles
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -16,7 +16,7 @@
   <link href="css/prism.css" rel="stylesheet" />
 </head>
 
-<body data-lab-id="">
+<body data-lab-id="17">
   <a class="skip-to-content" href="#content" tabindex="1">
     Skip to content
   </a>
@@ -37,20 +37,25 @@
     </nav>
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
-        <em>Lab </em>
-        Git
+        <em>Lab 17</em>
+        Page Titles
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about <code>Git</code></li>
+        <li>Add a <code class="language-html">&lt;title&gt;</code> to your personal website</li>
       </ul>
+      <h2>Your Title</h2>
+      <p>If you look at your website in your browser, you might notice that your tab just says <code>index.html</code> or the file path. That doesn't look very nice so let's change that.</p>
+      <img class="image" src="assets/index.png" alt="Image showing a webpage without the title tag">
+      <p>In your <code class="language-html">&lt;head&gt;</code>, </p>
+
 
 
     </div>
   </main>
   <script src="js/ui.js" type="text/javascript"></script>
-  <script src="js.prism.js" type="text/javascript"></script>
+  <script src="js/prism.js" type="text/javascript"></script>
   <script type="module">
     import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
     mermaid.initialize({startOnLoad: true, theme: "base"});
