--- a/ref.html
+++ b/ref.html
@@ -50,7 +50,7 @@
     </div>
   </main>
   <script src="js/ui.js" type="text/javascript"></script>
-  <script src="js.prism.js" type="text/javascript"></script>
+  <script src="js/prism.js" type="text/javascript"></script>
   <script type="module">
     import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
     mermaid.initialize({startOnLoad: true, theme: "base"});
