feat: add more pages

--- a/lab_015.html
+++ b/lab_015.html
@@ -47,8 +47,9 @@
       </ul>
       <h2>HTML</h2>
       <p> We'll come back to Git in a little bit, but for now let's learn about the <strong>HyperText Markup
-          Language</strong>. <strong>HTML</strong> is one half of what makes up a static website. If CSS is the pretty
-        neon lights, HTML is all the wiring and framework underneath. HTML is the foundation and structure for
+          Language</strong>. <strong>HTML</strong> is one half of what makes up a static website. If
+        <strong>CSS</strong> is the pretty neon lights and <strong>JavaScript</strong> is the flashing patterns and
+        programmed functionality, HTML is all the wiring and framework underneath. HTML is the foundation and structure for
         <em>all</em> web applications.
       </p>
       <p>It may sound intimidating, but HTML is just text with some fancy
