--- a/lab_016.html
+++ b/lab_016.html
@@ -72,7 +72,11 @@
       <pre class="file line-numbers" data-line="2-3,5-6" data-src="prism/html/basic-1.html"></pre>
       <p>Most tags will look like the <code class="language-html">&lt;html&gt;</code> and <code
           class="language-html">&lt;body&gt;</code> tags do with an opening and closing tag. Usually, content can be put
-        in between the tags.</p>
+        in between the tags. We'll be going over some of the most common and useful tags, but there are so many tags
+        that we can't possibly cover them all.</p>
+      <p>If you want to explore the tags, we suggest going to the official documentation for HTML! <a
+          href="https://developer.mozilla.org/en-US/docs/Web/HTML">https://developer.mozilla.org/en-US/docs/Web/HTML</a>
+      </p>
       <p class="note">Now would be a good time to stage and commit your changes as we're about to go into a new topic!
       </p>
       <h2>Structure, not Style</h2>
@@ -101,7 +105,7 @@
         <li>The <code class="language-html">&lt;footer&gt;</code> tag before the <code
             class="language-html">&lt;body&gt;</code></li>
       </ul>
-      <p class="note">Remember, all these tags have an opening and a closing tag. Also, your <code
+      <p class="note">Remember, both these tags have an opening and a closing tag. Also, your <code
           class="language-html">&lt;html&gt;</code> tag should still enclose everything.</p>
       <h2>Attributes</h2>
       <p>Some HTML tags will have what are called <em>attributes</em>. Attributes are extra information you can apply to
