--- a/lab_017.html
+++ b/lab_017.html
@@ -46,10 +46,30 @@
         <li>Add a <code class="language-html">&lt;title&gt;</code> to your personal website</li>
       </ul>
       <h2>Your Title</h2>
-      <p>If you look at your website in your browser, you might notice that your tab just says <code>index.html</code> or the file path. That doesn't look very nice so let's change that.</p>
-      <img class="image" src="assets/index.png" alt="Image showing a webpage without the title tag">
-      <p>In your <code class="language-html">&lt;head&gt;</code>, </p>
-
+      <p>If you look at your website in your browser, you might notice that your tab just says <code>index.html</code>
+        or the file path. That doesn't look very nice so let's change that.</p>
+      <img class="image" src="assets/notitle.png" alt="Image showing a webpage without the title tag">
+      <p>In your <code class="language-html">&lt;head&gt;</code>, add a <code
+          class="language-html">&lt;title&gt;</code>. Then, between the opening and closing tags of the <code
+          class="language-html">&lt;title&gt;</code>, give your website a title. It can be anything!</p>
+      <p>Now when you refresh your webpage, you should see that your website's tab has a title. If you save your webpage
+        as a bookmark, this will also be the name of your bookmark! The page below has the title "Personal Website".</p>
+      <img class="image" src="assets/title.png" alt="Image showing a webpage with the title tag">
+      <h2>Update Pages</h2>
+      <p>Let's set up your other HTML documents, just like you did for <code>index.html</code>. For each of the other
+        HTML documents, add the following:</p>
+      <ul>
+        <li>A <strong>document type declaration</strong> to the type of each file</li>
+        <li>Add an <code class="language-html">&lt;html&gt;</code> tag to each page</li>
+        <li>Add a <code class="language-html">&lt;head&gt;</code> tag to each page</li>
+        <li>Add a <code class="language-html">&lt;title&gt;</code> in the <code
+            class="language-html">&lt;head&gt;</code> of each page</li>
+        <li>Add a <code class="language-html">&lt;body&gt;</code> to each page</li>
+        <li>Add some text to each <code class="language-html">&lt;body&gt;</code> on each page</li>
+        <li>Add a <code class="language-html">&lt;footer&gt;</code> to each page</li>
+      </ul>
+      <p class="note">Remember to stage and commit your changes often along the way! If you need help, refer to the
+        previous labs or ask on GitHub Discussions!</p>
 
 
     </div>
