--- a/lab_018.html
+++ b/lab_018.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab  - Git
+    Lab 18 - Paragraphs and Headings
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -16,7 +16,7 @@
   <link href="css/prism.css" rel="stylesheet" />
 </head>
 
-<body data-lab-id="">
+<body data-lab-id="18">
   <a class="skip-to-content" href="#content" tabindex="1">
     Skip to content
   </a>
@@ -37,20 +37,26 @@
     </nav>
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
-        <em>Lab </em>
-        Git
+        <em>Lab 18</em>
+        Paragraphs and Headings
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about <code>Git</code></li>
+        <li>Learn about paragraphs and headings in HTML</li>
+        <li>Add a <code class="language-html">&lt;p&gt;</code> to your personal website</li>
+        <li>Add headings to your personal website</li>
       </ul>
+      <h2>Paragraph Structuring</h2>
+      <p>In your <code>index.html</code>'s <code class="language-html">&lt;body&gt;</code>, add another line:</p>
+      <h3 class="file-heading"><em>index.html</em></h3>
+      <pre class="file line-numbers" data-line="1" data-src="prism/html/basic-2.html"></pre>
 
 
     </div>
   </main>
   <script src="js/ui.js" type="text/javascript"></script>
-  <script src="js.prism.js" type="text/javascript"></script>
+  <script src="js/prism.js" type="text/javascript"></script>
   <script type="module">
     import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
     mermaid.initialize({startOnLoad: true, theme: "base"});
