--- a/prism/html/basic-3.html
+++ b/prism/html/basic-3.html
@@ -7,8 +7,8 @@
     <nav>
     </nav>
     <main>
-    Hello World! This is my website. 
-    This is a sentence.
+      <p>Hello World! This is my website.</p>
+      <p>This is a sentence.</p>
     </main>
     <footer>
     </footer>
