feat: add more labs

--- a/lab_017.html
+++ b/lab_017.html
@@ -44,8 +44,9 @@
       <h2>Goals</h2>
       <ul>
         <li>Add a <code class="language-html">&lt;title&gt;</code> to your personal website</li>
+        <li>Update all your other pages to be similar to include the tags we've learned about</li>
       </ul>
-      <h2>Your Title</h2>
+      <h2>Your Website Title</h2>
       <p>If you look at your website in your browser, you might notice that your tab just says <code>index.html</code>
         or the file path. That doesn't look very nice so let's change that.</p>
       <img class="image" src="assets/notitle.png" alt="Image showing a webpage without the title tag">
@@ -65,11 +66,14 @@
         <li>Add a <code class="language-html">&lt;title&gt;</code> in the <code
             class="language-html">&lt;head&gt;</code> of each page</li>
         <li>Add a <code class="language-html">&lt;body&gt;</code> to each page</li>
-        <li>Add some text to each <code class="language-html">&lt;body&gt;</code> on each page</li>
-        <li>Add a <code class="language-html">&lt;footer&gt;</code> to each page</li>
+        <li>Add a <code class="language-html">&lt;nav&gt;</code>, <code class="language-html">&lt;main&gt;</code>, and
+          <code class="language-html">&lt;footer&gt;</code> to each page's <code
+            class="language-html">&lt;body&gt;</code>
+        </li>
+        <li>Add some text to each <code class="language-html">&lt;main&gt;</code> on each page</li>
       </ul>
-      <p class="note">Remember to stage and commit your changes often along the way! If you need help, refer to the
-        previous labs or ask on GitHub Discussions!</p>
+      <p class="note">If you need help, refer to the previous labs or ask on GitHub Discussions! Remember to stage and
+        commit your changes often along the way! </p>
 
 
     </div>
