--- a/lab_018.html
+++ b/lab_018.html
@@ -50,7 +50,21 @@
       <h2>Paragraph Structuring</h2>
       <p>In your <code>index.html</code>'s <code class="language-html">&lt;body&gt;</code>, add another line:</p>
       <h3 class="file-heading"><em>index.html</em></h3>
-      <pre class="file line-numbers" data-line="1" data-src="prism/html/basic-2.html"></pre>
+      <pre class="file line-numbers" data-line="11" data-src="prism/html/basic-2.html"></pre>
+      <p>If you go to your webpage in your browser, you'll see that the text you added does not look the same as in your
+        code, on two separate lines.</p>
+      <img class="image" src="assets/noparagraph.png" alt="The text added to the page is not on two separate lines.">
+      <p>This is because web browsers don't usually take into account the way your code looks. Remember, HTML is all
+        about meaning, or <strong>semantics</strong>. This means that if you want there to be two separate blocks of
+        text, you need to explicitly code it.</p>
+      <p>This is where the <code class="language-html">&lt;p&gt;</code> tag comes in. Wrap each line of text in a <code
+          class="language-html">&lt;p&gt;</code> tag.</p>
+      <h3 class="file-heading"><em>index.html</em></h3>
+      <pre class="file line-numbers" data-src="prism/html/basic-3.html" data-line="10-11"></pre>
+      <img class="image" src="assets/paragraph.png" alt="The paragraphs added to the page is on two separate lines.">
+      <h2>Emphasis and Breaks</h2>
+      <p></p>
+
 
 
     </div>
