--- a/lab_016.html
+++ b/lab_016.html
@@ -87,7 +87,7 @@
       <video class="video" controls>
         <source src="assets/tags.mp4" type="">
       </video>
-      <h2>Head and Footer</h2>
+      <h2>Heads</h2>
       <p>Let's add some more structure to your website. While the main content of the your page goes inside it's <code
           class="language-html">&lt;body&gt;</code>, there is also the <code class="language-html">&lt;head&gt;</code>
         tag which goes before the <code class="language-html">&lt;body&gt;</code>. The <code
@@ -95,18 +95,33 @@
         visible on the page itself.</p>
       <p>This includes the <code class="language-html">&lt;title&gt;</code> tag which
         determines the title of your website, obvious we know. It can also include meta information for search engines
-        to categorize your site with and tags that link your HTML to your CSS styling.</p>
-      <p>Finally, the <code class="language-html">&lt;footer&gt;</code> tag comes
-        after the <code class="language-html">&lt;body&gt;</code>. On websites, this is usually where copyright
-        informaiton, privacy notices, etc goes. Add the following tags where they belong!</p>
+        to categorize your site with and tags that link your HTML to your CSS styling. For now, add the <code
+          class="language-html">&lt;head&gt;</code> tag before the <code class="language-html">&lt;body&gt;</code>.</p>
+      <p class="note">This is above your <code class="language-html">&lt;body&gt;</code> tag, but inside your <code
+          class="language-html">&lt;html&gt;</code> tag.</p>
+      <h2>Nav, Main, and Footer</h2>
+      <p>Inside of the <code class="language-html">&lt;body&gt;</code> tag, content can be split up into a few key
+        areas. There is usually a <code class="language-html">&lt;nav&gt;</code> tag as the first thing inside the body
+        tag.
+        This handles navigation between different pages and where our navbar is usually situated.
+      </p>
+      <p>Next, there is the <code class="language-html">&lt;main&gt;</code> tag. This is where the main content of the
+        <code class="language-html">&lt;body&gt;</code> goes. Finally, there is the <code
+          class="language-html">&lt;footer&gt;</code> which comes after <code class="language-html">&lt;main&gt;</code>.
+        On websites, this is usually where copyright information, privacy notices, etc goes. Add the following tags
+        where they belong!
+      </p>
       <ul>
-        <li>The <code class="language-html">&lt;head&gt;</code> tag before the <code
-            class="language-html">&lt;body&gt;</code></li>
-        <li>The <code class="language-html">&lt;footer&gt;</code> tag before the <code
-            class="language-html">&lt;body&gt;</code></li>
+        <li>The <code class="language-html">&lt;nav&gt;</code> tag at the top inside the <code
+            class="language-html">&lt;body&gt;</code> tag</li>
+        <li>The <code class="language-html">&lt;main&gt;</code> tag after the <code
+            class="language-html">&lt;nav&gt;</code> tag</li>
+        <li>Remember to move your text inside your <code class="language-html">&lt;main&gt;</code> tag!</li>
+        <li>The <code class="language-html">&lt;footer&gt;</code> tag after the <code
+            class="language-html">&lt;main&gt;</code></li>
       </ul>
-      <p class="note">Remember, both these tags have an opening and a closing tag. Also, your <code
-          class="language-html">&lt;html&gt;</code> tag should still enclose everything.</p>
+      <p class="note">Remember, all these tags have an opening and a closing tag. Also, your <code
+          class="language-html">&lt;body&gt;</code> tag should still enclose everything.</p>
       <h2>Attributes</h2>
       <p>Some HTML tags will have what are called <em>attributes</em>. Attributes are extra information you can apply to
         certain tags. One of the main thing they can be used for is to group different HTML tags together in a way that
