--- a/lab_018.html
+++ b/lab_018.html
@@ -61,10 +61,44 @@
           class="language-html">&lt;p&gt;</code> tag.</p>
       <h3 class="file-heading"><em>index.html</em></h3>
       <pre class="file line-numbers" data-src="prism/html/basic-3.html" data-line="10-11"></pre>
+      <p>In the browser, you can now see that the paragraphs are on two separate lines.</p>
       <img class="image" src="assets/paragraph.png" alt="The paragraphs added to the page is on two separate lines.">
+      <p> You can also achieve a line-break using the self-closing <code class="language-html">&lt;br&gt;</code>, or
+        line-break tag, inside of a paragraph tag between text. <em>However</em>, only use this if the ideas in the
+        paragraph are related. Don't use this as a subsitute for using multiple paragraph tags.</p>
       <h2>Emphasis and Breaks</h2>
-      <p></p>
+      <p>So far, all we have is plain text, but there are a couple of ways to emphasize and higlight
+        important text. You might have noticed some text that have been emphasized throughout this Starter Pack.</p>
 
+      <p>To do that you can surround text with the <code class="language-html">&lt;em&gt;</code> or the <code
+          class="language-html">&lt;strong&gt;</code> tags. Usually browsers will render the <code
+          class="language-html">&lt;em&gt;</code> as italicized and the <code
+          class="language-html">&lt;strong&gt;</code> tags as bold, but remember that HTML is about semantics or
+        meaning, not appearance. You should use these when you want to <em>emphasize</em> or <strong>strongly
+          emphasize</strong> text, not to make text italicized or bolded.</p>
+      <p>Get rid of the temporary text in your <code>index.html</code>'s <code class="language-html">&lt;main&gt;</code>
+        and instead write an about you! Use paragraphs, emphasis, and strong emphasis where appropriate!
+      </p>
+      <img class="image" src="assets/about-me.png" alt="A description or about me about Hack4Impact">
+      <p class="note">This is your reminder to commit! If it's been a while, remember you can separate out the staging
+        and committing of different files.</p>
+      <h2>Headings</h2>
+      <p>Continuing with text formatting, we have headings! They're exactly what they sound like. There are 6 different
+        headings with specific emphasis and styles. <code class="language-html">&lt;h1&gt;</code>, <code
+          class="language-html">&lt;h2&gt;</code>, <code class="language-html">&lt;h3&gt;</code>, <code
+          class="language-html">&lt;h4&gt;</code>, <code class="language-html">&lt;h5&gt;</code>, and <code
+          class="language-html">&lt;h6&gt;</code>.</p>
+      <p>At the top of your <code class="language-html">&lt;main&gt;</code>, before your <code
+          class="language-html">&lt;p&gt;</code> paragraphs, put an <code class="language-html">&lt;h1&gt;</code> tag.
+        Inside, let's put the text "Hello, World!"</p>
+      <img class="image" src="assets/heading.png" alt="A description or about me about Hack4Impact">
+      <p>The <code class="language-html">&lt;h1&gt;</code> headings is only be used once as the main heading of a page.
+        The other headings can be used as many times as necessary, but always in order. <code
+          class="language-html">&lt;h3&gt;</code> should be a sub-heading of <code
+          class="language-html">&lt;h2&gt;</code> and <code class="language-html">&lt;h6&gt;</code> should be the
+        sub-heading of <code class="language-html">&lt;h5&gt;</code> and so on.</p>
+      <h3 class="file-heading"><em>headings</em></h3>
+      <pre class="file"><h1 class="nostyle">heading 1</h1><h2 class="nostyle">heading 2</h2><h3 class="nostyle">heading 3</h3><h4 class="nostyle">heading 4</h4><h5 class="nostyle">heading 5</h5><h6 class="nostyle">heading 6</h6></pre>
 
 
     </div>
