--- a/lab_019.html
+++ b/lab_019.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab  - Git
+    Lab 19 - Spans and Divs
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -16,7 +16,7 @@
   <link href="css/prism.css" rel="stylesheet" />
 </head>
 
-<body data-lab-id="">
+<body data-lab-id="19">
   <a class="skip-to-content" href="#content" tabindex="1">
     Skip to content
   </a>
@@ -37,20 +37,27 @@
     </nav>
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
-        <em>Lab </em>
-        Git
+        <em>Lab 19</em>
+        Spans and Divs
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about <code>Git</code></li>
+        <li>Learn about <code class="language-html">&lt;span&gt;</code> and <code
+            class="language-html">&lt;div&gt;</code></li>
+        <li>Add <code class="language-html">&lt;div&gt;</code>s to your personal website</li>
       </ul>
-
+      <h2>Generics</h2>
+      <p><code class="language-html">&lt;span&gt;</code> and <code class="language-html">&lt;div&gt;</code> are generic
+        containers for content that don't have any semantic meaning to them. Although, we will continue to stress the
+        importance of writing HTML that provides meaning and structure to a page, <em>sometimes</em> we need a catch-all, 
+        generic solution for content that is not easily categorizable into one of the existing HTML tags.</p>
+      <p>Often times, you will attach a class</p>
 
     </div>
   </main>
   <script src="js/ui.js" type="text/javascript"></script>
-  <script src="js.prism.js" type="text/javascript"></script>
+  <script src="js/prism.js" type="text/javascript"></script>
   <script type="module">
     import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
     mermaid.initialize({startOnLoad: true, theme: "base"});
