--- a/lab_020.html
+++ b/lab_020.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab  - Git
+    Lab 20 - Spans and Divs
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -16,7 +16,7 @@
   <link href="css/prism.css" rel="stylesheet" />
 </head>
 
-<body data-lab-id="">
+<body data-lab-id="20">
   <a class="skip-to-content" href="#content" tabindex="1">
     Skip to content
   </a>
@@ -38,15 +38,15 @@
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
         <em>Lab </em>
-        Git
+        Spans and Divs
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about <code>Git</code></li>
+        <li>Learn about paragraphs and headings in HTML</li>
+        <li>Add a <code class="language-html">&lt;p&gt;</code> to your personal website</li>
+        <li>Add headings to your personal website</li>
       </ul>
-
-
     </div>
   </main>
   <script src="js/ui.js" type="text/javascript"></script>
